kubernetes/apps/network/internal/remote-services/services/obico.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-internal-obico
  namespace: network
spec:
  ports:
    - port: 3334
      protocol: TCP
      targetPort: 3334
      name: http
  type: ExternalName
  externalName: zeus.nas.home.internal
# ---
# # yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/endpointslice.json
# apiVersion: discovery.k8s.io/v1
# kind: EndpointSlice
# metadata:
#   name: remote-internal-obico
#   namespace: network
#   labels:
#     kubernetes.io/service-name: remote-internal-obico
# addressType: IPv4
# ports:
#   - port: 3334
# endpoints:
#   - addresses:
#     - zeus.nas.home.internal
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-internal-obico
  namespace: network
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
    error-pages.home.arpa/enabled: "true"
    # authentik.home.arpa/enabled: "true"
    # gethomepage.dev/app: "obico"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "obico"
    gethomepage.dev/description: "Obico - 3D Printer Monitoring"
    gethomepage.dev/href: "https://obi.${SECRET_DOMAIN}"
    gethomepage.dev/group: "Other"
    gethomepage.dev/icon: "obico.png"
    gethomepage.dev/siteMonitor: http://zeus.nas.home.internal:3334
spec:
  ingressClassName: internal
  rules:
    - host: "obi.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: remote-internal-obico
              port:
                number: 3334
  tls:
    - hosts:
        - "obi.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
